k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medical-app
  labels:
    name: medical-app
