k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-app-frontend-service
  namespace: medical-app-frontend
  labels:
    app: medical-app-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: medical-app-frontend
